<resources>
    <string name="app_name">PoE Fun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="currently_playing_song">PoE Fun Theme</string>
    <string name="currently_playing_artist">Artist</string>
    <string name="currently_playing_extra_info">Extra Info</string>
    <string name="play_pause">play or pause</string>
    <string name="text_mnu_set_ringtone">Set Ringtone</string>
    <string name="text_mnu_set_alarm">Set Alarm</string>
    <string name="text_mnu_set_notification">Set Notification</string>
    <string name="text_mnu_set_notification_app">Set Notification for this app</string>
    <string name="sounds">Sounds</string>
    <string name="email">Send us an email</string>
    <string name="subject_email">Hi, I\'m using the PoE Fun app</string>
    <string name="tab_news_text">News</string>
    <string name="tab_sounds_text">Sounds</string>
    <string name="tab_leaderboard_text">Leaders</string>
    <string name="settings_cat_general_title">General</string>
    <string name="settings_cat_update_news_when_start_title">Update news when start</string>
    <string name="settings_cat_update_leaderboards_when_start_title">Update Leaderboards when start</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="tab_tracker_text">Tracker</string>
    <string name="ok_message_dialog">OK</string>
    <string name="storage_permission_message">For the application to be able to download the sounds you need to grant storage permission. On the next screen, click on permissions and set the storage flag.</string>
    <string name="write_settings_permission_message">For the application can set the sounds as ringtone, alarm or notification. On the next screen set the write settings flag.</string>
    <string name="sound_successful_set_ringtone">Sound successful set as ringtone!</string>
    <string name="sound_successful_set_alarm">Sound successful set as alarm!</string>
    <string name="sound_successful_set_notification">Sound successful set as notification!</string>
    <string name="title_search">Search</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="yesterday_at">yesterday at</string>
    <string name="show_more">Show More</string>
    <string name="account">Account</string>
    <string name="filter">Filter</string>
    <string name="hint_seach_view_sounds">Name of group or sound</string>
    <string name="settings_cat_show_finished_events_title">Show finished events</string>
    <string name="channel_name">Poe Fun News</string>
    <string name="channel_description">Show the Poe news</string>
    <string name="sound_successful_set_notification_app">Sound successful set as notification for this app!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="depthSolo">Depth Solo</string>
    <string name="depth">Depth</string>
    <string name="sort">Sort</string>
    <string name="tab_bulk_item_exchange_text">Currency</string>
    <string name="select_league">Select League</string>
    <string name="what_you_have">What You Have?</string>
    <string name="what_you_want">What You Want?</string>
    <string name="currency_image">Currency Image</string>
    <string name="click_to_select_what_you_want">Click here to select what you want!</string>
    <string name="click_to_select_what_you_have">Click here to select what you have!</string>
    <string name="admob_app_id">ca-app-pub-3845382773372401~3581948171</string>
    <string name="is_worth">Is Worth</string>
    <string name="stock">Stock:</string>
    <string name="contact">Contact</string>
    <string name="no_items_found">No items found!</string>
    <string name="search">Search</string>
    <string name="online">Online</string>
    <string name="clear">Clear</string>
    <string name="cleared">Cleared!</string>
    <string name="share">Share</string>
    <string name="close">Close</string>
    <string name="copied_successful">Copied Successful!</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="selected">Selected</string>
</resources>
