<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonCopy"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonClose"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonShare"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/buttonCopy"
        android:layout_toLeftOf="@+id/buttonCopy"
        android:layout_toEndOf="@+id/buttonClose"
        android:layout_toRightOf="@+id/buttonClose"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCopy"
        app:layout_constraintStart_toEndOf="@+id/buttonClose" />

    <EditText
        android:id="@+id/editTextWhisper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewStock"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textMultiLine"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStock" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="10"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarAmount"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_below="@+id/editTextWhisper"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:max="51"
        android:min="1"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.junkersolutions.poefun.CustomComponents.ImageLoading
        android:id="@+id/imageLoadingCurrencyGet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/buttonShare"
        android:layout_below="@+id/seekBarAmount"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWhisper" />

    <com.junkersolutions.poefun.CustomComponents.ImageLoading
        android:id="@+id/imageLoadingCurrencyPay"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/buttonShare"
        android:layout_below="@+id/seekBarAmount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWhisper" />

    <TextView
        android:id="@+id/textViewAmountGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonShare"
        android:layout_below="@+id/seekBarAmount"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/imageLoadingCurrencyGet"
        android:gravity="center_vertical|start"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/imageLoadingCurrencyGet"
        app:layout_constraintStart_toEndOf="@+id/imageLoadingCurrencyGet"
        app:layout_constraintTop_toTopOf="@+id/imageLoadingCurrencyGet" />

    <TextView
        android:id="@+id/textViewAmountPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonShare"
        android:layout_below="@+id/seekBarAmount"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/imageLoadingCurrencyPay"
        android:gravity="center_vertical|end"
        android:text="53"
        app:layout_constraintBottom_toBottomOf="@+id/imageLoadingCurrencyPay"
        app:layout_constraintEnd_toStartOf="@+id/imageLoadingCurrencyPay"
        app:layout_constraintTop_toTopOf="@+id/imageLoadingCurrencyPay" />

</android.support.constraint.ConstraintLayout>
